<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="luckyspots/pictures"
        android:inputType="textCapWords"
        android:key="@string/THRESHOLD_SAVING_PATH_PICTURE"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Saving pictures to:"/>
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="luckyspots/video"
        android:inputType="textCapWords"
        android:key="@string/THRESHOLD_SAVING_PATH_VIDEO"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Saving video to:"/>
    <Preference android:title="@string/open_gallery_activity">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="content://media/internal/images/media"/>
    </Preference>

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <!--SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications"/-->

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <!--RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone"/-->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!--SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate"/-->

</PreferenceScreen>
