<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#40cdcccc"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:id="@+id/on_screen_controls_frame"
             tools:context="imagemanipulations.zome.android.com.luckySpotsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/on_screen_controls_menu_button"
             android:text=" ≡ "
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"/>

        <SeekBar
            android:layout_width="match_parent"
            android:paddingBottom="48dp"
            android:paddingTop="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_zoom"
            android:rotation="270"
            android:layout_gravity="center_horizontal|right"
            android:max="100"
            android:scrollIndicators="start|end"
            android:layout_marginStart="144dp"
            android:layout_marginRight="24dp"
            android:layout_below="@+id/on_screen_controls_menu_button"
            android:layout_toRightOf="@+id/on_screen_controls_menu_button"
            android:layout_toEndOf="@+id/on_screen_controls_menu_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/on_screen_controls_photo_button"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_gravity="right|top"
            android:layout_marginRight="21dp"
            android:layout_alignTop="@+id/seekBar_zoom"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/on_screen_controls_video_group"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="56dp"
            android:layout_below="@+id/on_screen_controls_photo_button"
            android:layout_alignLeft="@+id/on_screen_controls_photo_button"
            android:layout_alignStart="@+id/on_screen_controls_photo_button">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_record"
                android:id="@+id/on_screen_controls_video_record"
                android:layout_alignBottom="@+id/on_screen_controls_video_group"
                android:layout_alignRight="@+id/threshold_mode_radio_group"
                android:layout_alignEnd="@+id/threshold_mode_radio_group"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/on_screen_controls_video_stop_group"
                android:orientation="vertical"
                android:visibility="gone">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_pause"
                    android:id="@+id/on_screen_controls_video_pause"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/button_record"
                    android:id="@+id/on_screen_controls_video_record_after_pause"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/on_screen_controls_video_frames"
                    android:text="0"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/button_stop"
                    android:id="@+id/on_screen_controls_video_stop"/>
            </LinearLayout>
        </LinearLayout>
        <RadioGroup
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:id="@+id/threshold_mode_radio_group"

            android:layout_below="@+id/on_screen_controls_menu_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask_spots"
                android:id="@+id/threshold_mode_normal"
                android:checked="true"
                />
            <!--RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absolute_weight"
                android:id="@+id/threshold_mode_absolute"
                /-->

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask_detection_channel"
                android:id="@+id/checkBox_mask_selected_color"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detect_by_area"
                android:id="@+id/threshold_mode_area"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_processing"
                android:id="@+id/view_mode_preview"/>
        </RadioGroup>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/histogram"
            android:id="@+id/checkBoxHistogram"
            android:layout_below="@+id/threshold_mode_radio_group"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#41ffffff"
            android:id="@+id/linearLayout2"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/on_screen_controls_photo_button"
            android:layout_toStartOf="@+id/on_screen_controls_photo_button"
            android:layout_marginRight="48dp"
            android:layout_marginEnd="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#41ffffff"
                android:id="@+id/text_zoom_label"
                android:text="zoom"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_zoom_value"
                android:background="#41ffffff"
                android:layout_marginLeft="2dp"
                android:text="0"/>
        </LinearLayout>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_resolution"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/on_screen_controls_menu_button"
            android:layout_toLeftOf="@+id/linearLayout2"
            android:layout_toStartOf="@+id/linearLayout2"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/on_screen_controls_image_view"
            android:src="@drawable/view_image_icon_24"
            android:layout_alignLeft="@+id/on_screen_controls_video_group"
            android:layout_alignStart="@+id/on_screen_controls_video_group"
            android:layout_alignBottom="@+id/threshold_mode_radio_group"
            android:layout_below="@+id/on_screen_controls_video_group"
            android:layout_alignRight="@+id/on_screen_controls_video_group"
            android:layout_alignEnd="@+id/on_screen_controls_video_group"/>

    </RelativeLayout>

</FrameLayout>